hphp/hack/test/typecheck/function_hint_with_variadic_parameter_wrong_type.php.like_types.exp
File "function_hint_with_variadic_parameter_wrong_type.php", line 8, characters 22-40:
Invalid argument (Typing[4110])
File "function_hint_with_variadic_parameter_wrong_type.php", line 5, characters 29-52:
Expected ~(function(string): void) because it is an unenforceable type
File "function_hint_with_variadic_parameter_wrong_type.php", line 3, characters 10-21:
But got (function(int $y...): void)
